# smbench

./: .travis.yml  Cargo.toml  README.md
benches/: example.rs
src/: app.rs  bench.rs  common.rs  config.rs  error.rs  fmt.rs  lib.rs  macros.rs  memory.rs  summary.rs
src/reporter/: console.rs  json.rs  mod.rs
src/stats/: distribution.rs  functions.rs  mod.rs  outliers.rs  regression.rs
src/sys/: linux.rs  macos.rs  mod.rs  windows.rs
