[package]
name = "smbench"
version = "0.1.0"
authors = ["Kogia-sima <orcinus4627@gmail.com>"]
license = "MIT"
description = "Measure speed and memory usage of your program"
homepage = "https://github.com/Kogia-sima/smbench"
repository = "https://github.com/Kogia-sima/smbench"
readme = "README.md"
keywords = ["bench", "benchmark", "memory", "statistics"]
edition = "2018"

[dependencies]
argparse = { version = "0.2.2", optional = true }
platforms = { version = "0.2.1", optional = true }
order-stat = "0.1.3"
serde = { version = "1.0.106", optional = true }
serde_json = { version = "1.0.51", optional = true }

[dependencies.regex]
version = "1.3.6"
optional = true
default-features = false
features = ["std", "unicode-perl"]

[features]
default = ["argparse", "regex", "sysinfo"]
sysinfo = ["platforms"]
json = ["serde", "serde_json"]

[dev-dependencies]
assert_float_eq = "1.1.3"

[[bench]]
name = "example"
harness = false
